Swap basic test to relay on real Meta-Pack